--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:roundIcon="@mipmap/bookcase"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".BookmarkActivity"></activity>
+        <activity android:name=".AddBookmark" />
+        <activity android:name=".BookOwners" />
         <activity android:name=".ProfileMap"></activity>
         <activity android:name=".BuyRequests" />
         <activity android:name=".BookOwners"></activity>
