filter all books

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,15 @@
         android:roundIcon="@mipmap/bookcase"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BookmarkActivity"></activity>
+        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".BookmarkActivity" />
         <activity android:name=".AddBookmark" />
         <activity android:name=".BookOwners" />
-        <activity android:name=".ProfileMap"></activity>
+        <activity android:name=".ProfileMap" />
         <activity android:name=".BuyRequests" />
-        <activity android:name=".BookOwners"></activity>
+        <activity android:name=".BookOwners" />
         <activity android:name=".InsideExistingBooklistActivity" />
-        <activity android:name=".BuyRequests"></activity>
+        <activity android:name=".BuyRequests" />
         <activity android:name=".MyOrders" />
         <activity android:name=".InsideExistingBooklistActivity" />
         <activity android:name=".PublicBooklistActivity" />
